# CrispinMobile

./: .gitignore  .gitmodules  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/cpp/: .gitignore  CMakeLists.txt
app/src/main/cpp/nativeinterface/: AudioEngine.h  CMakeLists.txt  funcs.cpp
app/src/main/res/raw/: texture_vert.vert  uniform_colour_frag.frag
app/src/main/res/values/: themes.xml
app/test/: build.gradle
app/test/src/main/: AndroidManifest.xml
crispinmobile/: build.gradle
crispinmobile/demos/: build.gradle
crispinmobile/demos/src/main/: AndroidManifest.xml
crispinmobile/src/main/: AndroidManifest.xml
crispinmobile/src/main/cpp/: CMakeLists.txt
crispinmobile/src/main/cpp/nativeinterface/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  funcs.cpp
crispinmobile/src/main/res/layout/: activity_unsupported_device.xml
crispinmobile/src/main/res/raw/: attribute_colour_frag.frag  attribute_colour_vert.vert  instance_colour_frag.frag  instance_colour_lighting_2d_frag.frag  instance_colour_lighting_2d_vert.vert  instance_colour_lighting_frag.frag  instance_colour_lighting_frag_2d.frag  instance_colour_lighting_texture_2d_frag.frag  instance_colour_lighting_texture_2d_vert.vert  instance_colour_lighting_texture_frag.frag  instance_colour_lighting_texture_vert.vert  (+54 more)
crispinmobile/textdemo/: build.gradle
crispinmobile/textdemo/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/cpp/: .gitignore  CMakeLists.txt
src/main/cpp/nativeinterface/: AudioEngine.cpp  CMakeLists.txt  funcs.cpp
src/main/res/layout/: activity_unsupported_device.xml
src/main/res/raw/: attribute_colour_frag.frag  attribute_colour_vert.vert  normal_frag.frag  normal_texture_frag.frag  normal_texture_vert.vert  normal_vert.vert  text_frag.frag  texture_frag.frag  texture_vert.vert
(+410 files in other folders)
